# hermes_workspace

./: README.md
stock-trading-v2/: .gitignore  pyproject.toml
stock-trading-v2/deploy/: forward_prepare.py
stock-trading-v2/docs/: 00-clean-slate.md  01-swing-strategy-v0.md  02-universe-and-risk-v0.md  03-backtest-data-contract.md  04-backtest-v0-spec.md  05-llm-decision-layer-v0.md  06-hermes-forward-observation-routine.md  07-krx-pit-universe-acquisition.md  08-handoff-and-project-state.md  09-survivorship-mitigation-without-krx.md  10-autonomous-trading.md  authoritative-halt-release-phase1.md  external-nonce-authority-phase1.md  forward-observation-v2.md  kis-domestic-daily-price.md  kis-production-reconciliation-phase1.md  kis-production-submitter-boundary.md  kis-resumable-daily-snapshot-collector.md  krx-current-xlsx-normalization.md  krx-historical-metadata-source-recon.md  krx-universe-metadata.md  phase1-audit.md  privileged-executor-authorization-protocol-phase1.md  production-deployment-preflight-phase1.md  public-data-snapshots.md
stock-trading-v2/tests/: test_authoritative_halt_release.py  test_backtest_cli.py  test_backtest_data.py  test_backtest_engine.py  test_backtest_ledgers.py  test_backtest_metrics.py  test_backtest_scenarios.py  test_backtest_sensitivity.py  test_backtest_v0.py  test_candidate_selection.py  test_close_time_candidates.py  test_contracts.py  test_daily_loss_guard.py  test_deployment_preflight.py  test_entry_plan_execution.py  test_entry_planning.py  test_exit_evaluation.py  test_exit_execution.py  test_external_nonce_authority.py  (+59 more)
(+85 files in other folders)
